fix all grids to use box grid spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -280,39 +280,24 @@ a, a:hover {
   /* line 109, ../../scss/shared.scss */
   .row .col {
     float: left;
-    padding-left: 40px;
+    margin-left: 2%;
+    padding: 0;
   }
-  /* line 113, ../../scss/shared.scss */
+  /* line 114, ../../scss/shared.scss */
   .row .col:first-child {
-    padding-left: 0;
+    margin-left: 0;
   }
-  /* line 117, ../../scss/shared.scss */
-  .row .col :last-child {
-    margin-bottom: 0;
-  }
-  /* line 129, ../../scss/shared.scss */
+  /* line 121, ../../scss/shared.scss */
   .row.col-3 .col {
-    width: 33.3%;
+    width: 32%;
   }
-  /* line 132, ../../scss/shared.scss */
-  .row.col-3 .col:last-child {
-    float: right;
-  }
-  /* line 136, ../../scss/shared.scss */
+  /* line 124, ../../scss/shared.scss */
   .row.col-3 .col.span-2 {
-    width: 66.7%;
+    width: 66%;
   }
-  /* line 143, ../../scss/shared.scss */
+  /* line 131, ../../scss/shared.scss */
   .row.col-4 .col {
-    width: 25%;
-  }
-  /* line 146, ../../scss/shared.scss */
-  .row.col-4 .col.span-2 {
-    width: 50%;
-  }
-  /* line 150, ../../scss/shared.scss */
-  .row.col-4 .col.span-3 {
-    width: 75%;
+    width: 23.5%;
   }
 }
 /* line 3, ../../scss/owl-override.scss */
@@ -575,27 +560,28 @@ a, a:hover {
     font-size: 36px;
   }
 }
-/* line 6, ../../scss/box-grid.scss */
+/* line 4, ../../scss/box-grid.scss */
 .box-grid .row .col {
   margin: 20px 0 0;
+  position: relative;
 }
-/* line 9, ../../scss/box-grid.scss */
+/* line 7, ../../scss/box-grid.scss */
 .box-grid .row .col .box {
   position: relative;
 }
-/* line 16, ../../scss/box-grid.scss */
+/* line 14, ../../scss/box-grid.scss */
 .box-grid .name {
   position: absolute;
   color: #59595c;
   font-size: 2rem;
   padding: 2rem;
 }
-/* line 23, ../../scss/box-grid.scss */
+/* line 21, ../../scss/box-grid.scss */
 .box-grid .showcase {
   width: 100%;
   position: relative;
 }
-/* line 27, ../../scss/box-grid.scss */
+/* line 25, ../../scss/box-grid.scss */
 .box-grid .showcase .name {
   top: 4.5rem;
   background-color: rgba(51, 204, 255, 0.9);
@@ -603,24 +589,28 @@ a, a:hover {
 }
 
 @media only screen and (min-width: 570px) {
-  /* line 40, ../../scss/box-grid.scss */
+  /* line 38, ../../scss/box-grid.scss */
   .box-grid .row {
     margin: 2% 0;
   }
-  /* line 43, ../../scss/box-grid.scss */
+  /* line 41, ../../scss/box-grid.scss */
   .box-grid .row .col {
     margin: 0 0 0 2%;
     padding: 0;
   }
-  /* line 48, ../../scss/box-grid.scss */
+  /* line 46, ../../scss/box-grid.scss */
   .box-grid .row .col:first-child {
     margin-left: 0;
   }
-  /* line 55, ../../scss/box-grid.scss */
+  /* line 53, ../../scss/box-grid.scss */
   .box-grid .row.col-3 .col {
     width: 32%;
   }
-  /* line 61, ../../scss/box-grid.scss */
+  /* line 56, ../../scss/box-grid.scss */
+  .box-grid .row.col-3 .col.span-2 {
+    width: 66%;
+  }
+  /* line 63, ../../scss/box-grid.scss */
   .box-grid .row.col-4 .col {
     width: 23.5%;
   }
