--- a/scss/shared.scss
+++ b/scss/shared.scss
@@ -108,48 +108,28 @@
 
     .col {
       float: left;
-      padding-left: 40px;
+      margin-left: 2%;
+      padding: 0;
 
       &:first-child {
-        padding-left: 0;
-      }
+        margin-left: 0;
 
-      :last-child {
-        margin-bottom: 0;
       }
     }
-//
-//    &.col-2 {
-//      .col {
-//        width: 50%;
-//      }
-//    }
 
     &.col-3 {
       .col {
-        width: 33.3%;
-
-        &:last-child {
-          float: right;
-        }
+        width: 32%;
 
         &.span-2 {
-          width: 66.7%;
+          width: 66%;
         }
       }
     }
 
     &.col-4 {
       .col {
-        width: 25%;
-
-        &.span-2 {
-          width: 50%;
-        }
-
-        &.span-3 {
-          width: 75%;
-        }
+        width: 23.5%;
       }
     }
   }
